[package]
name = "flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.0", features = ["derive"] }
config = { version = "0.14.0", features = [] }
ctrlc = "3.4.4"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
